--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -107,6 +107,6 @@
       </div>
     </div>
   </div>
+  <!-- <ordersuccess></ordersuccess> -->
+  <!-- <car-product></car-product> -->
 </div>
-
-
