added display card

--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -26,6 +26,7 @@
         <p hidden class="bold-p">toyota</p>
       </div>
     </div>
+    <car-product></car-product>
   </div>
 
   <section class="display-section">
@@ -76,17 +77,6 @@
   </section>
   <section class="question-section">
     <h2>Frequently asked questions</h2>
-    <details>
-      <summary>What do I need to book a car on Turo?</summary>
-      <p>
-        To book a car on Turo, you must create a Turo account, be 18 years old
-        or older in the US, 21 years old or older in the UK, 23 years old or
-        older in Canada, have a valid driver’s license, and get approved to
-        drive on Turo. When you’re booking your first trip, you’ll go through a
-        quick approval process by entering your driver’s license and some other
-        information. In most cases, you’ll get approved immediately, and you’ll
-        be set for all future road trips, day trips, and business trips!
-      </p>
-    </details>
+    <app-faq></app-faq>
   </section>
 </main>
