--- a/src/app/home/homepage.component.html
+++ b/src/app/home/homepage.component.html
@@ -21,6 +21,11 @@
     <div class="features__div">
       <img class="feature__img" src="/assets/img/img-1.jpg" />
       <div class="feature__block">
+        <label class="checkbox-btn">
+          <label for="checkbox"></label>
+          <input id="checkbox" type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
         <h4 class="feature__heading">Real-Time Location Tracking</h4>
         <p class="feature__p">
           Effortlessly find available cars near you. Our platform updates in
