--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -26,7 +26,7 @@
         <p hidden class="bold-p">toyota</p>
       </div>
     </div>
-    <car-product></car-product>
+    <!-- <car-product></car-product> -->
   </div>
 
   <section class="display-section">
@@ -74,6 +74,12 @@
       </p>
     </div>
     <button>Book Car</button>
+  </section>
+
+  <section class="experience">
+    <h3>Browse by experience</h3>
+
+    <app-experience></app-experience>
   </section>
   <section class="question-section">
     <h2>Frequently asked questions</h2>
