--- a/src/app/home/homepage.component.css
+++ b/src/app/home/homepage.component.css
@@ -1,15 +1,25 @@
-.home {
+.background {
   display: flex;
   justify-content: space-between;
   padding: 0 3rem;
-  height: 75vh;
   background-color: var(--color-black);
+  height: 75vh;
+  filter: brightness(60%);
+  background-image: url(../../assets/img/benz/benz-main.jpg);
+  background-size: cover;
+}
+
+.home__content {
+  position: absolute;
+  top: 3rem;
+  left: 4rem;
 }
 
 .home__img {
   width: 32rem;
   height: auto;
 }
+
 .heading1 {
   font-size: 3rem;
   padding-top: 6rem;
@@ -18,6 +28,25 @@
 }
 .heading1 span {
   font-size: 2.8rem;
+}
+
+.search {
+  padding: 1rem;
+  background: var(--color-white);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: max-content;
+}
+
+.search__svg {
+  background: none;
+  border: none;
+  outline: none;
+}
+.search__svg img {
+  height: 1rem;
 }
 
 .home__button {
@@ -83,7 +112,6 @@
   font-size: 1rem;
 }
 
-
 /* Customize the label (the checkbox-btn) */
 .checkbox-btn {
   display: block;
@@ -118,7 +146,7 @@
   height: 25px;
   width: 25px;
   border: 2.5px solid #ffffff;
-  transition: .2s linear;
+  transition: 0.2s linear;
 }
 .checkbox-btn input:checked ~ .checkmark {
   background-color: transparent;
@@ -137,7 +165,7 @@
   border: 2px solid #0ea021;
   filter: drop-shadow(0px 0px 10px #0ea021);
   border-width: 0 2.5px 2.5px 0;
-  transition: .2s linear;
+  transition: 0.2s linear;
   transform: translate(-50%, -50%) rotate(-90deg) scale(0.2);
 }
 
@@ -163,4 +191,3 @@
     transform: translate(-50%, -50%) rotate(0deg) scale(1.6);
   }
 }
-
