--- a/src/app/home/homepage.component.css
+++ b/src/app/home/homepage.component.css
@@ -23,7 +23,7 @@
 .heading1 {
   font-size: 3rem;
   padding-top: 6rem;
-  color: var(--color-secondary);
+  color: var(--color-white);
   padding-bottom: 4rem;
 }
 .heading1 span {
@@ -31,40 +31,64 @@
 }
 
 .search {
-  padding: 1rem;
+  padding: 10px;
   background: var(--color-white);
-  border-radius: 10px;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: max-content;
 }
 
-.search__svg {
-  background: none;
+.search input {
   border: none;
   outline: none;
+  border-right: 1px solid var(--primary-color);
+  height: 2rem;
+  width: 9rem;
+  font-size: 0.9rem;
+  caret-color: var(--primary-color);
+  padding-left: 5px;
+}
+
+.search input:nth-child(3) {
+  border-right: none;
+}
+
+.search input::placeholder {
+  font-weight: 500;
+}
+
+.search__svg {
+  background: var(--primary-color);
+  border: none;
+  outline: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.7rem;
+  width: 2rem;
+  height: 2rem;
+  transition: all 0.4s ease;
+}
+
+.search__svg:hover {
+  background: var(--secondary-color);
+}
+
+.search__svg img {
+  height: 1rem;
 }
 .search__svg img {
   height: 1rem;
 }
 
-.home__button {
-  padding: 0.8rem 2rem;
-  background-color: var(--color-black);
-  border: none;
-  border-radius: 5px;
-  border: 1px solid var(--color-white);
-  font-size: 1rem;
-  color: var(--color-white);
-  font-family: inherit;
-  transition: all 0.6s;
-  cursor: pointer;
-}
-.home__button:hover {
-  background-color: transparent;
-  border: 1px solid var(--color-grey);
-  color: var(--color-grey);
+.explore {
+  color: var(--grey-secondary);
+  height: 25rem;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .features__session {
@@ -191,3 +215,175 @@
     transform: translate(-50%, -50%) rotate(0deg) scale(1.6);
   }
 }
+
+
+@font-face {
+  font-family: "Geist";
+  src: url("https://assets.codepen.io/605876/GeistVF.ttf") format("truetype");
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --bg: hsl(0 0% 2%);
+}
+
+body {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  background: var(--bg);
+}
+
+main {
+  width: 60ch;
+  max-width: 100%;
+}
+
+body {
+  font-family: 'Geist', arial;
+  font-weight: 100;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  padding: 1rem;
+  list-style-type: none;
+}
+
+ul::after {
+  border-radius: 1rem;
+  content: "";
+  position: absolute;
+  background: hsl(0 0% 10%);
+  pointer-events: none;
+  z-index: -2;
+  inset:
+    calc(var(--top) * 1px)
+    calc(100% - (var(--right) * 1px))
+    calc(100% - (var(--bottom) * 1px))
+    calc(var(--left) * 1px);
+  transition: inset 0.2s;
+}
+
+ul[data-enhanced]:hover {
+  --active: 1;
+}
+ul[data-enhanced]::after {
+  opacity: var(--active, 0);
+  transition: opacity 0.2s, inset 0.2s 0.2s;
+}
+ul[data-enhanced]:hover::after {
+  transition: opacity 0.2s 0.2s, inset 0.2s;
+}
+
+@supports(anchor-name: --anchor) {
+  li:nth-of-type(1) article { anchor-name: --develop; }
+  li:nth-of-type(2) article { anchor-name: --preview; }
+  li:nth-of-type(3) article { anchor-name: --ship; }
+  li:nth-of-type(4) article { anchor-name: --profit; }
+
+  :root { --anchor: --develop; }
+  :root:has(li:nth-of-type(1):hover) { --anchor: --develop; }
+  :root:has(li:nth-of-type(2):hover) { --anchor: --preview; }
+  :root:has(li:nth-of-type(3):hover) { --anchor: --ship; }
+  :root:has(li:nth-of-type(4):hover) { --anchor: --profit; }  
+
+  ul::after {
+    inset:
+      anchor(var(--anchor) top)
+      anchor(var(--anchor) right)
+      anchor(var(--anchor) bottom)
+      anchor(var(--anchor) left);
+  }
+
+  ul:has(li:hover) {
+    --active: 1;
+  }
+  ul::after {
+    opacity: var(--active, 0);
+    transition: opacity 0.2s, inset 0.2s 0.2s;
+  }
+  ul:hover::after {
+    transition: opacity 0.2s 0.2s, inset 0.2s;
+  }
+  
+  article::after {
+    content: unset;
+    display: none;
+  }
+}
+
+ul:not([data-enhanced]) article::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -2;
+  background: hsl(0 0% 10%);
+  border-radius: 1rem;
+  opacity: var(--li-active, 0);
+  transition: opacity 0.2s;
+}
+
+article {
+  color: hsl(0 0% 80%);
+  padding: 1rem;
+  display: grid;
+  gap: 0.5rem;
+  position: relative;
+}
+
+article::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background:
+    linear-gradient(var(--bg) 0 2px, transparent 2px 38px) -20px -20px / 40px 40px,
+    linear-gradient(90deg, var(--bg) 0 2px, transparent 2px 38px) -20px -20px / 40px 40px;
+  mask: linear-gradient(-35deg, var(--bg) 0%, transparent 45%);
+  z-index: -1;
+  opacity: var(--li-active, 0);
+  transition: opacity 0.2s;
+}
+
+li:hover {
+  --li-active: 1;
+}
+
+article h3 {
+  margin: 0;
+  font-weight: 120;
+}
+
+article p {
+  margin: 0;
+  text-wrap: pretty;
+  background: linear-gradient(hsl(0 0% 80%), hsl(0 0% 50%));
+  color: transparent;
+  background-clip: text;
+  font-weight: 80;
+}
+
+article svg {
+  width: 44px;
+}
+
+article svg path {
+  stroke-width: 0.75;
+  stroke: hsl(var(--hue, 30) calc(var(--li-active, 0) * 60%) 60%);
+  transition: stroke 0.2s;
+}
+
+li:nth-of-type(1) { --hue: 30; }
+li:nth-of-type(2) { --hue: 280; }
+li:nth-of-type(3) { --hue: 210; }
+li:nth-of-type(4) { --hue: 120; }
