--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -1,17 +1,3 @@
-/* :root {
-  --bg: #fff;
-  --text: #7288a2;
-  --gray: #4d5974;
-  --lightgray: #e5e5e5;
-  --blue: #03b5d2;
-} */
-
-* {
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
-
 .container {
   margin: 0 auto;
   width: 80%;
@@ -22,7 +8,7 @@
 }
 
 .accordion button[aria-expanded="true"] {
-  border-bottom: 1px solid var(--blue);
+  border-bottom: 1px solid var(--color-white);
 }
 
 .accordion button {
@@ -31,40 +17,42 @@
   text-align: left;
   width: 100%;
   padding: 1em 0;
-  color: var(--text);
+  color: var(--grey-secondary);
   font-size: 1.15rem;
   font-weight: 400;
   border: none;
   background: none;
   outline: none;
+  transition: all 0.4s ease;
 }
 
 .accordion button:hover,
 .accordion button:focus {
   cursor: pointer;
-  color: var(--blue);
+  color: var(--color-white);
 }
 
 .accordion button:hover::after,
 .accordion button:focus::after {
   cursor: pointer;
-  color: var(--blue);
-  border: 1px solid var(--blue);
+  color: var(--color-white);
+  border: 1px solid var(--color-white);
 }
 
 .accordion .accordion-title {
   padding: 1em 1.5em 1em 0;
+  font-size: 17px;
 }
 
 .accordion .icon {
   display: inline-block;
   position: absolute;
-  top: 18px;
-  right: 0;
-  width: 22px;
+  top: 20px;
+  right: 32px;
+  /* width: 22px;
   height: 22px;
   border: 1px solid;
-  border-radius: 22px;
+  border-radius: 22px; */
 }
 
 .accordion .icon::before {
@@ -83,14 +71,14 @@
   position: absolute;
   content: "";
   top: 5px;
-  left: 9px;
   width: 2px;
   height: 10px;
   background: currentColor;
+  left: 9.3px;
 }
 
 .accordion button[aria-expanded="true"] {
-  color: var(--blue);
+  color: var(--color-white);
 }
 
 .accordion button[aria-expanded="true"] .icon::after {
@@ -116,4 +104,6 @@
   font-size: 1rem;
   font-weight: 300;
   margin: 1.3em 0;
+  color: var(--color-white);
+  font-size: 15px;
 }
