--- a/src/app/components/home-testimonials/home-testimonials.component.css
+++ b/src/app/components/home-testimonials/home-testimonials.component.css
@@ -1,5 +1,5 @@
 main {
-  height: 25rem;
+  height: 20rem;
 
   color: var(--color-white);
 }
@@ -24,14 +24,11 @@ main {
   border: 1px solid rgba(255, 255, 255, 0.18);
   padding-top: 3rem;
   transition: all 0.5s ease;
+  height: 7rem;
 }
 
 .testimonial__box:hover {
   transform: scale(1.04);
-}
-
-.testimonial__box:hover ~ .stars ~ .review {
-  color: var(--color-white);
 }
 
 .img {
@@ -59,7 +56,7 @@ main {
 
 .review {
   font-size: 0.9rem;
-  color: var(--grey-secondary);
+  /* color: var(--grey-secondary); */
 }
 
 @-webkit-keyframes scroll {
@@ -90,14 +87,13 @@ main {
   overflow: hidden;
   position: relative;
   width: 100%;
-  padding-top: 4rem;
+  padding-top: 5rem;
   height: 65%;
 }
 
 .slider .slide-track {
   -webkit-animation: scroll 40s linear infinite;
   animation: scroll 40s linear infinite;
-  display: flex;
   width: calc(250px * 14);
   height: 90%;
   display: flex;
