--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -28,15 +28,13 @@
   <brands></brands>
 </section>
 
-
 <section class="features__session">
   <h2 class="section__heading">Features</h2>
   <main-features></main-features>
 </section>
 
 <section class="home-testimonials">
-  <h2 class="section__heading">Meet the hosts</h2>
-  <p>Learn more about the host who will make your trip unforgetable</p>
+  <h2 class="section__heading">Recent Reviews</h2>
   <home-testimonials></home-testimonials>
 </section>
 
@@ -44,10 +42,6 @@
   <h2 class="section__heading">Faq</h2>
   <app-faq></app-faq>
 </section>
-
-
-
-
 
 Why Zipcar? Reserve wheels when you want them, by the hour or day, and only pay
 for the time you drive. piggy bank icon Save money Zipcar covers gas, insurance
