--- a/src/app/components/features/features.component.css
+++ b/src/app/components/features/features.component.css
@@ -9,22 +9,19 @@ body {
   background: var(--bg);
 }
 
-/* main {
-  width: 60ch;
-  max-width: 100%;
-} */
-
 ul {
   display: flex;
   list-style-type: none;
   padding: 0;
   margin: 0;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 li {
   padding: 1rem;
   list-style-type: none;
-  width: 67%;
+  width: 37%;
 }
 
 ul::after {
@@ -143,8 +140,8 @@ li:hover {
 
 article h3 {
   margin: 0;
-  font-weight: 120;
-  color: var(--color-white);
+  font-weight: 500;
+  color: var(--gray-color);
 }
 
 article p {
