--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -97,4 +97,9 @@
   font-size: 2.5rem;
   text-align: center;
   color: var(--color-white);
+  background: linear-gradient(hsl(0 0% 10%), hsl(0 0% 60%));
+  background-clip: border-box;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
