--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,27 +1,6 @@
 <navigation></navigation>
 
-<div>
-  <div class="background"></div>
-  <div class="home__content">
-    <h1 class="heading1">
-      DriveFinder -<br />
-      <span>
-        Your Gateway to <br />
-        Seamless Car Rentals!</span
-      >
-    </h1>
-
-    <div class="search">
-      <input type="text" placeholder="Where" />
-      <input type="text" placeholder="From" />
-      <input type="text" placeholder="Until" />
-
-      <button class="search__svg">
-        <img src="./assets/img/search.svg" alt="search icon" />
-      </button>
-    </div>
-  </div>
-</div>
+<header-hero></header-hero>
 
 <section class="explore">
   <h2 class="section__heading">Explore Cars by Brands</h2>
