finished how it works page

--- a/src/app/components/brands/brands.component.html
+++ b/src/app/components/brands/brands.component.html
@@ -4,9 +4,10 @@
     <div class="slider-wrap">
       <div class="slider-main">
         <div class="item" *ngFor="let car of cars">
-          <div class="text">{{ car.brand }}</div>
+          <div class="text">{{ category }}</div>
+          <!-- <div class="text">{{ car.brand }}</div> -->
           <div class="imgbox">
-            <img [src]="car.img.main" alt="{{ car.name }}" />
+            <img [src]="car.img.main" alt="{{ car.brand }}" />
           </div>
         </div>
       </div>
@@ -21,11 +22,3 @@
     </div>
   </div>
 </section>
-
-<!-- <div *ngFor="let car of cars">
-  <h2>{{ car.name }}</h2>
-
-  <div *ngFor="let additionalImg of car.img.additional">
-    <img [src]="additionalImg" alt="{{ car.name }} - Additional Image" />
-  </div>
-</div> -->
