--- a/src/app/components/header-hero/header-hero.component.html
+++ b/src/app/components/header-hero/header-hero.component.html
@@ -9,15 +9,6 @@
       >
     </h1>
 
-  
-    <div class="search">
-      <input type="text" placeholder="Where" />
-      <input type="text" placeholder="From" />
-      <input type="text" placeholder="Until" />
-
-      <button class="search__svg">
-        <img src="./assets/img/search.svg" alt="search icon" />
-      </button>
-    </div>
+    <search-sub></search-sub>
   </div>
 </div>
