--- a/src/app/components/review-sub/review-sub.component.css
+++ b/src/app/components/review-sub/review-sub.component.css
@@ -1,3 +1,15 @@
+main {
+  display: flex;
+  gap: 1rem;
+  padding: 4rem 2rem;
+  justify-content: center;
+}
+
+.items {
+  display: flex;
+  gap: 1rem;
+}
+
 .testimonial__list li {
   list-style: none;
 }
@@ -18,7 +30,8 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   padding-top: 3rem;
   transition: all 0.5s ease;
-  height: 7rem;
+  /* height: 7rem; */
+  color: var(--gray-color);
 }
 
 .testimonial__box:hover {
@@ -38,22 +51,22 @@
 .reviewer p {
   font-weight: bold;
   margin: 0;
+  color: var(--color-white);
 }
 .reviewer span {
   font-size: small;
   color: var(--gray-color);
 }
 
-.stars {
-  color: var(--grey-secondary);
-}
-
 .review {
-  font-size: 0.9rem;
-  /* color: var(--grey-secondary); */
+  padding-bottom: 5px;
+  font-size: 0.81rem;
 }
 
-.items {
-  display: flex;
-  gap: 1rem;
+.model {
+  font-size: 11px;
+  font-weight: bold;
+  position: absolute;
+  bottom: 3px;
+  right: 18px;
 }
