--- a/src/app/components/review-sub/review-sub.component.html
+++ b/src/app/components/review-sub/review-sub.component.html
@@ -1,17 +1,18 @@
-<div class="items">
+<main>
   <div class="testimonial__box" *ngFor="let review of reviews">
     <div class="img">
       <img [src]="review.img" alt="{{ review.username }}" />
     </div>
     <div class="reviewer">
       <p>{{ review.username }}</p>
-      <span>Joined {{ review.date }}</span>
+      <span>{{ review.date }}</span>
     </div>
 
     <stars [rating]="review.rating"></stars>
-
+    
     <div class="review">
       {{ review.comment }}
     </div>
+    <span class="model">-{{ review.carModel }}</span>
   </div>
-</div>
+</main>
