--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,15 +1,26 @@
 <div class="nav">
-  <img src="../assets/img/logo.png" alt="logo" class="logo" />
+  <img src="../assets/img/logo.png" alt="logo" class="logo" routerLink="/" />
 
   <nav class="top__nav">
     <ul>
-      <li class="link nav__active">Home</li>
-      <li class="link">About Us</li>
-      <li class="link">Contact Us</li>
-      <li class="link">Locations</li>
-      <li class="link">Special Offers</li>
+      <li class="link" routerLinkActive="nav__active">
+        <a href="">About Us</a>
+      </li>
+      <li class="link" routerLinkActive="nav__active">
+        <a href="">Insurance & protection</a>
+      </li>
+      <li
+        class="link"
+        routerLink="/how-drivefinder-works"
+        routerLinkActive="nav__active"
+      >
+        <a href="how-drivefinder-works">How it works</a>
+      </li>
     </ul>
   </nav>
 
+  
   <button class="top__nav--btn">Drive Now</button>
 </div>
+
+Host tools Carculator
