--- a/src/app/components/home-testimonials/home-testimonials.component.html
+++ b/src/app/components/home-testimonials/home-testimonials.component.html
@@ -1,7 +1,7 @@
 <div class="items">
   <div class="testimonial__box" *ngFor="let review of reviews">
     <div class="img">
-      <img [src]="review.img" alt="{{ review.username }}" />
+      <img [src]="review.img" [alt]="review.username" />
     </div>
     <div class="reviewer">
       <p>{{ review.username }}</p>
