--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="nav">
-  <img src="../assets/img/logo.png" alt="logo" class="logo" routerLink="/" />
+  <img src="../assets/img/logos/logo.png" alt="logo" class="logo" routerLink="/" />
 
   <nav class="top__nav">
     <ul>
@@ -19,8 +19,5 @@
     </ul>
   </nav>
 
-  
   <button class="top__nav--btn">Drive Now</button>
 </div>
-
-Host tools Carculator
