--- a/src/app/components/search-sub/search-sub.component.html
+++ b/src/app/components/search-sub/search-sub.component.html
@@ -4,6 +4,6 @@
   <input type="text" placeholder="Until" />
 
   <button class="search__svg">
-    <img src="./assets/img/search.svg" alt="search icon" />
+    <img src="./assets/img/icons/search.svg" alt="search icon" />
   </button>
 </div>
