--- a/src/app/pages/how-it-works/how-it-works.component.html
+++ b/src/app/pages/how-it-works/how-it-works.component.html
@@ -49,3 +49,14 @@
   <section-heading>Faq</section-heading>
   <app-faq></app-faq>
 </section>
+<!-- 
+Why DriveFinder?
+ Reserve wheels when you want them, by the hour or day, and only pay
+for the time you drive. piggy bank icon Save money DriveFinder covers gas, insurance
+options,* parking, and maintenance for a potential savings of $1000/month over
+car ownership. map icon Cars near you DriveFinders live in your local neighborhood,
+and in cities, campuses and airports across the globe. half sun/moon icon Drive
+on-demand No waiting in line at the counter. (No need to even search for your
+keys!) Just book and go. rocket icon Go beyond public transit DriveFinder is the
+perfect complement to the bus and train—whether it’s local errands or weekend
+adventures. -->
