--- a/src/app/pages/brand-page/brand-page.component.html
+++ b/src/app/pages/brand-page/brand-page.component.html
@@ -1,1 +1,76 @@
-<p>brand-page works!</p>
+<header-sub [title]="title" [imgUrl]="backgroundImg"></header-sub>
+
+<section>
+  <p class="small__heading">Top rated cars</p>
+  <brand-cars></brand-cars>
+  <div class="flex__center btn__box">
+    <button class="CTA">Book a brand</button>
+  </div>
+</section>
+
+<carousel [images]="images" [autoSlide]="false"></carousel>
+
+<section>
+  <div class="flex__center pad">
+    <div class="img-container">
+      <!-- <img src="./assets/img/Memojis/deluxe.jpg" /> -->
+      <img src="./assets/img/convertibles.jpg" />
+    </div>
+    <div class="content">
+      <h2>Experience true luxury driving</h2>
+      <P class="small__content"
+        >Sometimes luxury is a necessity, and a normal car simply won’t do.
+        Whether it’s a car for a wedding, promising date, or vital business
+        meeting, driving a Mercedes is a guaranteed way to impress. Book a
+        Mercedes-Benz on Turo for that important occasion, a leisurely day trip,
+        or an unforgettably fun drive.</P
+      >
+      <div class="flex__center btn__box">
+        <button class="CTA">Book a brand to drive</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <section-heading>Top Mercedes models</section-heading>
+  <div class="padding__box">
+    <div class="three__grid">
+      <div class="grid__item">
+        <p class="small__heading">Mercedes-Benz C-Class</p>
+        <p class="small__content">
+          The Mercedes C-Class may be small, but shares the luxury and
+          technology features of its larger counterparts. The C-Class sedan is
+          the perfect size to get around town with a few passengers, or drive a
+          C63 AMG to feel massive power in a compact body.
+        </p>
+      </div>
+      <div class="grid__item">
+        <p class="small__heading">Mercedes-Benz C-Class</p>
+        <p class="small__content">
+          The Mercedes C-Class may be small, but shares the luxury and
+          technology features of its larger counterparts. The C-Class sedan is
+          the perfect size to get around town with a few passengers, or drive a
+          C63 AMG to feel massive power in a compact body.
+        </p>
+      </div>
+      <div class="grid__item">
+        <p class="small__heading">Mercedes-Benz C-Class</p>
+        <p class="small__content">
+          The Mercedes C-Class may be small, but shares the luxury and
+          technology features of its larger counterparts. The C-Class sedan is
+          the perfect size to get around town with a few passengers, or drive a
+          C63 AMG to feel massive power in a compact body.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="flex__center btn__box">
+    <button class="CTA">Book a brand</button>
+  </div>
+</section>
+
+<section>
+  <section-heading>Faq</section-heading>
+  <app-faq></app-faq>
+</section>
