--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,5 +1,4 @@
-<header-hero>
-</header-hero>
+<header-hero> </header-hero>
 
 <section>
   <section-heading>Explore Cars by Brands</section-heading>
@@ -8,7 +7,7 @@
 
 <section>
   <section-heading>Explore Cars by Category</section-heading>
-  <brands [cars]="categorizedCars" [category]="text"></brands>
+  <category [categories]="categorizedCars"></category>
 </section>
 
 <section>
@@ -31,13 +30,3 @@
   <section-heading>Faq</section-heading>
   <app-faq></app-faq>
 </section>
-
-Why Zipcar? Reserve wheels when you want them, by the hour or day, and only pay
-for the time you drive. piggy bank icon Save money Zipcar covers gas, insurance
-options,* parking, and maintenance for a potential savings of $1000/month over
-car ownership. map icon Cars near you Zipcars live in your local neighborhood,
-and in cities, campuses and airports across the globe. half sun/moon icon Drive
-on-demand No waiting in line at the counter. (No need to even search for your
-keys!) Just book and go. rocket icon Go beyond public transit Zipcar is the
-perfect complement to the bus and train—whether it’s local errands or weekend
-adventures.
