--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,4 @@
-<section class="brands">
+<section class="section">
   <div class="fluid">
     <div class="slider-wrap">
       <div class="slider-main">
