--- a/src/app/pages/brand-page/brand-page.component.html
+++ b/src/app/pages/brand-page/brand-page.component.html
@@ -8,7 +8,9 @@
   </div>
 </section>
 
-<carousel [images]="images" [autoSlide]="false"></carousel>
+<!-- <carousel [images]="images" [autoSlide]="false"></carousel> -->
+<carousel-main [images]="images" [autoSlide]="false"></carousel-main>
+<car-info></car-info>
 
 <section>
   <div class="flex__center pad">
