--- a/src/app/components/brands/brands.component.html
+++ b/src/app/components/brands/brands.component.html
@@ -2,10 +2,10 @@
   <div class="fluid">
     <div class="slider-wrap">
       <div class="slider-main">
-        <div class="item" *ngFor="let car of cars">
-          <div class="text">{{ car.brand }}</div>
+        <div class="item" *ngFor="let brand of brands">
+          <div class="text">{{ brand.text }}</div>
           <div class="imgbox">
-            <img [src]="car.img.main" [alt]="car.brand" />
+            <img [src]="brand.img" [alt]="brand.text" />
           </div>
         </div>
       </div>
