--- a/src/app/components/car-info/car-info.component.html
+++ b/src/app/components/car-info/car-info.component.html
@@ -1,4 +1,4 @@
-<section style="display: flex">
+<section class="box">
   <main>
     <div class="brand">
       <h2>Mercedes-Benz AMG GT 2019</h2>
@@ -177,6 +177,8 @@
       </div>
     </div>
   </main>
+<booking></booking>
+
 </section>
 <div class="modal">
   <div class="card">
@@ -211,4 +213,3 @@
     </ul>
   </div>
 </div>
-<booking></booking>
