--- a/src/app/pages/how-it-works/how-it-works.component.html
+++ b/src/app/pages/how-it-works/how-it-works.component.html
@@ -47,8 +47,9 @@
 
 <section>
   <section-heading>Faq</section-heading>
-  <app-faq></app-faq>
+  <app-faq [items]="faq"></app-faq>
 </section>
+
 <!-- 
 Why DriveFinder?
  Reserve wheels when you want them, by the hour or day, and only pay
