--- a/src/app/components/brands/brands.component.html
+++ b/src/app/components/brands/brands.component.html
@@ -2,7 +2,7 @@
   <div class="fluid">
     <div class="slider-wrap">
       <div class="slider-main">
-        <div class="item" *ngFor="let brand of brands">
+        <div class="item" *ngFor="let brand of brands" [routerLink]="['brand', brand.text]">
           <div class="text">{{ brand.text }}</div>
           <div class="imgbox">
             <img [src]="brand.img" [alt]="brand.text" />
