--- a/src/app/components/carousel-main/carousel-main.component.css
+++ b/src/app/components/carousel-main/carousel-main.component.css
@@ -4,17 +4,31 @@
   text-align: center;
   width: 70rem;
   border-radius: 15px;
+  /* position: relative;
+  -webkit-flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  box-sizing: content-box;
+  height: 100px; */
+  padding-bottom: 35%;
 }
 
 .carousel-contaainer__img {
   display: none;
   border-radius: 15px;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .carousel-contaainer img.image-active {
   display: block;
   width: 100%;
-  height: 400px;
+  /* height: 400px; */
 }
 
 .carousel-dot-container {
